--- a/style.css
+++ b/style.css
@@ -28,13 +28,26 @@ html, body {
 	padding: 0;
 	cursor: default;
 	font: 18px/1.5em 'Source Sans Pro', sans-serif;
-	letter-spacing: 0.1em;
-	color: #111;
-	background: #ffcc4d;
-	-webkit-transition: background 0.5s ease-out;
-	   -moz-transition: background 0.5s ease-out;
-	    -ms-transition: background 0.5s ease-out;
-	     -o-transition: background 0.5s ease-out;
+	letter-spacing: 0.05em;
+	background: #39383a;
+	color: #fff;
+	-moz-osx-font-smoothing: grayscale;
+	 -webkit-font-smoothing: antialiased;
+	    -moz-font-smoothing: antialiased;
+	         font-smoothing: antialiased;
+}
+a {
+	color: #fff;
+	text-decoration: none;
+	border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+	-webkit-transition: border .2s ease-out;
+	   -moz-transition: border .2s ease-out;
+	    -ms-transition: border .2s ease-out;
+		 -o-transition: border .2s ease-out;
+			transition: border .2s ease-out;
+}
+a:hover {
+	border-bottom: 2px solid rgba(255, 255, 255, 0.8);
 }
 .centered {
 	display: table;
@@ -60,8 +73,24 @@ video {
 h1 {
 	color: #fff;
 	font-weight: normal;
-	opacity: 0.9;
+	opacity: 0.8;
+	margin: 0;
 }
+.fg { position: relative; }
+.links { margin: 30px 0; }
+.links a {
+	display: inline-block;
+	opacity: 0.9;
+	border: 3px solid rgba(255,255,255,0.3);
+	border-radius: 30px;
+	padding: 7px;
+	width: 55px;
+	height: 55px;
+	text-align: center;
+	margin: 0 5px;
+}
+.links a svg { display: inline-block; }
+.links a:hover { border: 3px solid rgba(255,255,255,0.8); }
 .cover {
 	position: absolute;
 	top: 0;
@@ -73,3 +102,4 @@ h1 {
 	height: 50px;
 	background: whitesmoke;
 }
+#talks { display: none; }
