--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ video {
 	width: 596px;
 	height: 336px;
 	-webkit-filter: contrast(120%);
-	filter: sepia(120%);
+	   -moz-filter: contrast(120%);
+	        filter: contrast(120%);
 	background: transparent;
 }
 h1 {
@@ -84,18 +85,57 @@ h1 {
 .fg { position: relative; }
 .links { margin: 30px 0; }
 .links a {
+	position: relative;
 	display: inline-block;
 	opacity: 0.9;
-	border: 3px solid rgba(255,255,255,0.3);
-	border-radius: 30px;
-	padding: 7px;
-	width: 55px;
-	height: 55px;
 	text-align: center;
-	margin: 0 5px;
+	border: 0;
+	width: 50px;
+	height: 50px;
+	margin: 10px;
+	line-height: 75px;
+	opacity: 0;
+	-webkit-transform: translateY(30px);
+	   -moz-transform: translateY(30px);
+	-webkit-animation: rise .5s cubic-bezier(.4,2,1,.9) forwards;
+	   -moz-animation: rise .5s cubic-bezier(.4,2,1,.9) forwards;
+}
+.links a:nth-child(1) {
+	-webkit-animation-delay: 0.25s;
+	   -moz-animation-delay: 0.25s;
+}
+.links a:nth-child(2) {
+	-webkit-animation-delay: 0.5s;
+	   -moz-animation-delay: 0.5s;
+}
+.links a:nth-child(3) {
+	-webkit-animation-delay: 0.75s;
+	   -moz-animation-delay: 0.75s;
 }
 .links a svg { display: inline-block; }
-.links a:hover { border: 3px solid rgba(255,255,255,0.8); }
+.links a:before {
+	border: 3px solid rgba(255,255,255,0.3);
+	border-radius: 50px;
+	content: '';
+	display: block;
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	top: -3px;
+	left: -3px;
+	-webkit-transition: all .1s ease-out;
+	   -moz-transition: all .1s ease-out;
+	    -ms-transition: all .1s ease-out;
+		 -o-transition: all .1s ease-out;
+			transition: all .1s ease-out;
+}
+.links a:hover:before {
+	border-color: rgba(255,255,255,0.8);
+	top: -6px;
+	left: -6px;
+	width: 56px;
+	height: 56px;
+}
 .cover {
 	position: absolute;
 	top: 0;
@@ -107,4 +147,12 @@ h1 {
 	height: 50px;
 	background: whitesmoke;
 }
-#talks { display: none; }
+#talks { visibility: hidden; }
+@-webkit-keyframes rise {
+	0%   { opacity: 0; -webkit-transform: translateY(30px); }
+	100% { opacity: 1; -webkit-transform: translateY(0px);  }
+}
+@-moz-keyframes rise {
+	0%   { opacity: 0; -moz-transform: translateY(30px); }
+	100% { opacity: 1; -moz-transform: translateY(0px);  }
+}
