--- a/css/main.scss
+++ b/css/main.scss
@@ -1,20 +1,31 @@
+---
+# Only the main Sass file needs front matter (the dashes are enough)
+---
 
-@keycolor: rgb(168, 86, 239);
-@keycolor: rgb(76, 214, 188);
-@keycolor: rgb(75, 181, 234); // blue
-@keycolor: rgb(77, 214, 189); // torquois
-@keycolor: rgb(250, 113, 94); // tomatoe
-@keycolor: rgb(238, 202, 70); // mustard
-@keycolor: rgb(253, 95, 101); // red
-@keycolor: #f3d02c;
-@keycolor: #98c4b4;
-@keycolor: #19cf8c;
-@keycolor: #fc5253; // bright red
+@charset 'utf-8';
 
-@black: #373737;
+$base-font-family : 'Myriad Set Pro', 'Helvetica Neue', 'Helvetica', 'Open Sans', Arial, sans-serif;
+$base-font-size   :   16px;
+$base-font-weight : 300;
+$small-font-size  :  $base-font-size * 0.875;
+$base-line-height : 1.5;
 
-@easing  : cubic-bezier(.1,.82,.25,1);
-@easing2 : cubic-bezier(.24, 2, .27, .26);
+$brand-color: rgb(168, 86, 239);
+$brand-color: rgb(76, 214, 188);
+$brand-color: rgb(75, 181, 234); // blue
+$brand-color: rgb(77, 214, 189); // torquois
+$brand-color: rgb(250, 113, 94); // tomatoe
+$brand-color: rgb(238, 202, 70); // mustard
+$brand-color: rgb(253, 95, 101); // red
+$brand-color: #f3d02c;
+$brand-color: #98c4b4;
+$brand-color: #19cf8c;
+$brand-color: #fc5253; // bright red
+
+$text-color: #373737;
+
+$easing  : cubic-bezier(.1,.82,.25,1);
+$easing2 : cubic-bezier(.24, 2, .27, .26);
 
 * { 
 	-webkit-box-sizing: border-box;
@@ -23,13 +34,13 @@
 }
 
 html, body {
-	border: 3px solid gold;
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	color: @black;
-	font-family: 'Myriad Set Pro', 'Helvetica Neue', 'Helvetica', 'Open Sans', 'Arial', sans-serif;
+	color: $text-color;
+	font-family: $base-font-family;
+	font-size: $base-font-size;
 	-moz-osx-font-smoothing: grayscale;
 	 -webkit-font-smoothing: antialiased;
 	    -moz-font-smoothing: antialiased;
@@ -44,11 +55,11 @@ h3 {
 }
 
 a {
-	color: @black;
+	color: $text-color;
 	text-decoration: none;
-	transition: color .2s @easing;
+	transition: color .2s $easing;
 	&:hover {
-		color: @keycolor;
+		color: $brand-color;
 		text-decoration: none;
 	}
 }
@@ -87,12 +98,10 @@ header {
 	position: relative;
 	padding: 3em;
 	color: #fff;
-
-	background: @keycolor;
+	background: $brand-color;
+	text-shadow: 0 0 1em $brand-color;
 
 	&>div { position: relative }
-
-	text-shadow: 0 0 1em @keycolor;
 
 	h1 {
 		margin: 0;
@@ -108,7 +117,7 @@ header {
 			margin-right: .5em;
 			&:hover {
 				display: inline-block;
-				svg { fill: @black }
+				svg { fill: $text-color }
 			}
 		}
 		svg {
@@ -122,13 +131,13 @@ header {
 		display: block;
 		position: absolute;
 		top: 0;
-		right: -50px;
+		right: -10vh;
 		width: 100vw;
 		height: 100%;
 		background-size: 80vh;
 		background-repeat: no-repeat;
-		background-position: 65vw 10vh;
-		background-image: url(static/portrait.png);
+		background-position: right 10vh;
+		background-image: url(../static/portrait.png);
 		-webkit-filter: grayscale(1) contrast(0.7);
 	}
 }
