--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,5 +2,7 @@
 
 </footer>
 
-<script src="http://localhost:35729/livereload.js"></script>
+{% if jeykll.environment != "production" %}
+	<script src="http://localhost:35729/livereload.js"></script>
+{% endif %}
 
