--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,3 +6,14 @@
 	<script src="http://localhost:35729/livereload.js"></script>
 {% endif %}
 
+<div id="fullscreen-menu">
+	<nav>
+		<ul>
+			<li><a href="#">About<b>.</b></a></li>
+			<li><a href="#">Articles<b>.</b></a></li>
+			<li><a href="#">Contact<b>.</b></a></li>
+			<li><a href="#">Work<b>.</b></a></li>
+		</ul>
+	</nav>
+</div>
+
