--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,4 @@
-<footer>
-
-</footer>
+<footer></footer>
 
 {% if jeykll.environment != "production" %}
 	<script src="http://localhost:35729/livereload.js"></script>
@@ -9,11 +7,12 @@
 <div id="fullscreen-menu">
 	<nav>
 		<ul>
-			<li><a href="#">About<b>.</b></a></li>
-			<li><a href="#">Articles<b>.</b></a></li>
-			<li><a href="#">Contact<b>.</b></a></li>
-			<li><a href="#">Work<b>.</b></a></li>
+			<li><a href="/about">About<b>.</b></a></li>
+			<li><a href="/articles">Articles<b>.</b></a></li>
+			<li><a href="/contact">Contact<b>.</b></a></li>
+			<li><a href="/work">Work<b>.</b></a></li>
 		</ul>
 	</nav>
 </div>
 
+<script src="/static/main.js"></script>
