--- a/css/main.scss
+++ b/css/main.scss
@@ -3,33 +3,14 @@
 ---
 
 @charset 'utf-8';
-@import "nav-icon";
+
+@import "colors", "easing", "nav-icon";
 
 $base-font-family : 'Myriad Set Pro', 'Helvetica Neue', 'Helvetica', 'Open Sans', Arial, sans-serif;
 $base-font-size   :   16px;
 $base-font-weight : 300;
 $small-font-size  :  $base-font-size * 0.875;
 $base-line-height : 1.5;
-
-$brand-color: rgb(168, 86, 239);
-$brand-color: rgb(76, 214, 188);
-$brand-color: rgb(75, 181, 234); // blue
-$brand-color: rgb(77, 214, 189); // torquois
-$brand-color: rgb(250, 113, 94); // tomatoe
-$brand-color: rgb(238, 202, 70); // mustard
-$brand-color: rgb(253, 95, 101); // red
-$brand-color: #f5263a; // brilliant red
-$brand-color: #f3d02c;
-$brand-color: #98c4b4;
-$brand-color: #19cf8c;
-$brand-color: #fec147;
-$brand-color: #fc5253; // bright red
-// fg #f64028 - bg #e1e1dc
-
-$text-color: #373737;
-
-$easing  : cubic-bezier(.1,.82,.25,1);
-$easing2 : cubic-bezier(.24, 2, .27, .26);
 
 * { 
 	-webkit-box-sizing: border-box;
@@ -184,6 +165,8 @@ section {
 }
 
 #fullscreen-menu {
+	&.opened { display: block }
+	display: none;
 	z-index: 9;
 	top: 0;
 	left: 0;
@@ -195,10 +178,6 @@ section {
 	text-align: center;
 	font-size: 60px;
 	font-weight: 700;
-	b {
-		font-size: 1em;
-		padding-left: 0;
-	}
 	nav {
 		top: 50%;
 		width: 100%;
@@ -215,6 +194,10 @@ section {
 					&:hover {
 						color: $text-color;
 						transform: scale3d(.9,.9,.9);
+					}
+					b {
+						font-size: 1em;
+						padding-left: 0.05em;
 					}
 				}
 			}
