--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,11 @@ html, body {
 	         font-smoothing: antialiased;
 }
 
+::selection {
+	background: $text-color;
+	color: #fff;
+}
+
 h3 {
 	margin: .5em 0;
 	font-size: 25px;
@@ -84,30 +89,20 @@ header {
 	padding: 3em;
 	color: #fff;
 	background: $brand-color;
-	text-shadow: 0 0 1em $brand-color;
+	//text-shadow: 0 0 1em $brand-color;
 
 	&>div { position: relative }
 
 	h1 {
 		margin: 0;
 		padding: 0;
-		line-height: .8em;
+		line-height: .9em;
 		letter-spacing: -.02em;
-		font-size: 70px;
-		font-weight: 700 }
-
-	#connect-icons {
-		margin-top: 1em;
-		a {
-			margin-right: .5em;
-			&:hover {
-				display: inline-block;
-				svg { fill: $text-color }
-			}
-		}
-		svg {
-			fill: #fff;
-			width: 32px;
+		font-size: 80px;
+		font-weight: 700;
+		b {
+			font-size: .8em;
+			padding: 0;
 		}
 	}
 
@@ -164,9 +159,22 @@ section {
 		line-height: 1.4em }
 }
 
+#connect-icons {
+	opacity: 0;
+	transform: translateY(-50%);
+	transition: transform 1s $easing .4s, opacity 1s $easing .4s;
+	a {
+		svg { fill: #fff }
+		svg#twitter-icon { width: 40px }
+		svg#github-icon { width: 36px }
+		svg#speaking-icon { width: 44px }
+		&:hover svg { fill: $text-color }
+	}
+}
+
 #fullscreen-menu {
-	&.opened { display: block }
-	display: none;
+	transform: translate(-100%);
+	transition: transform .4s $snap-easing;
 	z-index: 9;
 	top: 0;
 	left: 0;
@@ -185,22 +193,41 @@ section {
 		transform: translateY(-50%);
 		ul {
 			list-style: none;
+			margin: 0 150px 50px;
+			padding: 0;
 			li {
 				margin: 0;
+				opacity: 0;
+				transform: translateY(50%);
 				a {
 					display: block;
 					line-height: 120px;
 					color: #fff;
-					&:hover {
-						color: $text-color;
-						transform: scale3d(.9,.9,.9);
-					}
 					b {
 						font-size: 1em;
 						padding-left: 0.05em;
 					}
 				}
+				&:hover a {
+					color: $text-color;
+					transform: scale3d(.9,.9,.9);
+				}
 			}
+		}
+	}
+	&.opened {
+		transform: translateX(0);
+		#connect-icons {
+			opacity: 1;
+			transform: translateY(0);
+		}
+		nav ul li {
+			opacity: 1;
+			transform: translateY(0);
+			transition: transform 1s $easing, opacity 1s $easing;
+			&:nth-child(1) { transition-delay: .4s }
+			&:nth-child(2) { transition-delay: .5s }
+			&:nth-child(3) { transition-delay: .6s }
 		}
 	}
 }
