--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,12 @@
-<a class="nav-icon"><b></b></a>
-<article>
+<span class="nav-icon"><b></b></span>
+<section id="masthead">
 	<header>
 		<div>
 			<h1>Petro<br/>Salema<b>.</b></h1>
 			<h3>Designer &middot; Programmer &middot; Speaker</h3>
-			<!-- div>
-				On a mission for beauty, innovation and truth, together
-				with wonderful people<b>.</b>
-			</div -->
 		</div>
 	</header>
-	<section class="centered">
+	<article class="centered">
 		<div>
 			<div>
 				<a href="#">
@@ -22,5 +18,5 @@
 				</h3>
 			</div>
 		</div>
-	</section>
-</article>
+	</article>
+</section>
