--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 
 @charset 'utf-8';
 
-@import "colors", "easing", "nav-icon";
+@import "colors", "easing", "nav-icon", "masthead", "fullscreen-menu";
 
 $base-font-family : 'Myriad Set Pro', 'Helvetica Neue', 'Helvetica', 'Open Sans', Arial, sans-serif;
 $base-font-size   :   16px;
@@ -38,7 +38,7 @@ html, body {
 }
 
 h3 {
-	margin: .5em 0;
+	margin: 1em 0;
 	font-size: 25px;
 	font-weight: 300;
 	text-align: left;
@@ -66,169 +66,20 @@ b {
 	display: table;
 	&>:first-child {
 		display: table-cell;
-		vertical-align: middle }
+		vertical-align: middle;
+	}
 }
 
-article {
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	height: 100vh;
-	&>* {
-		position: relative;
-		width: 50%;
-		height: 100%;
-		background: #fff }
-}
-
-header {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
+#about {
 	position: relative;
-	padding: 3em;
-	color: #fff;
+	min-height: 100vh;
+	padding: 100px;
 	background: $brand-color;
-	//text-shadow: 0 0 1em $brand-color;
+	font-size: 50px;
+	font-weight: 300;
+	text-align: center;
+	color: #fff;
 
 	&>div { position: relative }
-
-	h1 {
-		margin: 0;
-		padding: 0;
-		line-height: .9em;
-		letter-spacing: -.02em;
-		font-size: 80px;
-		font-weight: 700;
-		b {
-			font-size: .8em;
-			padding: 0;
-		}
-	}
-
-	&::before {
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		right: -10vh;
-		width: 100vw;
-		height: 100%;
-		background-size: 80vh;
-		background-repeat: no-repeat;
-		background-position: right 10vh;
-		background-image: url(../static/portrait.png);
-		-webkit-filter: contrast(0.7);
-		   -moz-filter: contrast(0.7);
-		        filter: contrast(0.7);
-	}
-}
-
-section {
-	padding: 3em 10vw;
-
-	&>div>div {
-		max-width: 500px;
-		margin: 0 auto;
-		&>div { text-transform: uppercase }
-	}
-
-	h2 {
-		margin: 0;
-		padding: 0;
-		line-height: 1em;
-		text-transform: uppercase;
-		font-weight: 700;
-		font-size: 50px;
-		font-family: 'Playfair Display', serif;
-	}
-
-	h3 {
-		display: inline-block;
-		a {
-			font-weight: 700;
-			display: inline-block;
-			margin-top: -.3em;
-			font-size: .7em;
-			vertical-align: middle }
-	}
-
-	p {
-		margin: 0;
-		padding: 0;
-		line-height: 1.4em }
-}
-
-#connect-icons {
-	opacity: 0;
-	transform: translateY(-50%);
-	transition: transform 1s $easing .4s, opacity 1s $easing .4s;
-	a {
-		svg { fill: #fff }
-		svg#twitter-icon { width: 40px }
-		svg#github-icon { width: 36px }
-		svg#speaking-icon { width: 44px }
-		&:hover svg { fill: $text-color }
-	}
-}
-
-#fullscreen-menu {
-	transform: translate(-100%);
-	transition: transform .4s $snap-easing;
-	z-index: 9;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	background: $brand-color;
-	opacity: 0.95;
-	text-align: center;
-	font-size: 60px;
-	font-weight: 700;
-	nav {
-		top: 50%;
-		width: 100%;
-		position: absolute;
-		transform: translateY(-50%);
-		ul {
-			list-style: none;
-			margin: 0 150px 50px;
-			padding: 0;
-			li {
-				margin: 0;
-				opacity: 0;
-				transform: translateY(50%);
-				a {
-					display: block;
-					line-height: 120px;
-					color: #fff;
-					b {
-						font-size: 1em;
-						padding-left: 0.05em;
-					}
-				}
-				&:hover a {
-					color: $text-color;
-					transform: scale3d(.9,.9,.9);
-				}
-			}
-		}
-	}
-	&.opened {
-		transform: translateX(0);
-		#connect-icons {
-			opacity: 1;
-			transform: translateY(0);
-		}
-		nav ul li {
-			opacity: 1;
-			transform: translateY(0);
-			transition: transform 1s $easing, opacity 1s $easing;
-			&:nth-child(1) { transition-delay: .4s }
-			&:nth-child(2) { transition-delay: .5s }
-			&:nth-child(3) { transition-delay: .6s }
-		}
-	}
 }
 
