--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,7 @@ html, body {
 }
 
 h3 {
-	margin: 1em 0;
+	margin: .5em 0;
 	font-size: 25px;
 	font-weight: 300;
 	text-align: left;
@@ -48,6 +48,7 @@ a {
 	color: $text-color;
 	text-decoration: none;
 	transition: color .2s $easing, transform .6s $easing;
+	outline: 0;
 	&:hover {
 		color: $brand-color;
 		text-decoration: none;
@@ -72,14 +73,44 @@ b {
 
 #about {
 	position: relative;
-	min-height: 100vh;
-	padding: 100px;
+	min-height: 500px;
+	padding: 200px 100px;
 	background: $brand-color;
 	font-size: 50px;
 	font-weight: 300;
 	text-align: center;
 	color: #fff;
-
+	overflow: hidden;
 	&>div { position: relative }
+
+	&::before {
+		opacity: 0.9;
+		content: '';
+		display: block;
+		position: absolute;
+		top: 50px;
+		right: 50px;
+		width: 100%;
+		height: 100%;
+		background-size: auto 150%;
+		background-repeat: no-repeat;
+		background-position: right top;
+		background-image: url(../static/portrait4.png);
+		-webkit-filter: contrast(0.7);
+		   -moz-filter: contrast(0.7);
+				filter: contrast(0.7);
+	}
+}
+
+
+.posts {
+	border: 3px solid red;
+	list-style: none;
+	li {
+		float: left;
+		width: 50%;
+		height: 400px;
+		background: linear-gradient(transparent, rgba(0,0,0,0.1));
+	}
 }
 
