--- a/css/main.scss
+++ b/css/main.scss
@@ -102,15 +102,29 @@ b {
 	}
 }
 
-
 .posts {
-	border: 3px solid red;
+	margin: 0;
+	padding: 0;
 	list-style: none;
 	li {
 		float: left;
 		width: 50%;
-		height: 400px;
-		background: linear-gradient(transparent, rgba(0,0,0,0.1));
+		a {
+			display: block;
+			width: 100%;
+			height: 400px;
+			padding: 3em 2em;
+			background: $text-color;
+			color: #fff;
+		}
+		h2 {
+			margin: 0;
+			padding: 0;
+			line-height: 1em;
+			font-weight: 700;
+			font-size: 50px;
+			font-family: 'Playfair Display', serif;
+		}
 	}
 }
 
