Add covers to posts

--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -10,6 +10,9 @@ $brand-color: #f3d02c;
 $brand-color: #98c4b4;
 $brand-color: #19cf8c;
 $brand-color: #fec147;
+$brand-color: #8A67FF;
+$brand-color: #2fd9bc;
+$brand-color: #00deb1;
 $brand-color: #fc5253; // bright red
 // fg #f64028 - bg #e1e1dc
 
