--- a/_sass/easing.scss
+++ b/_sass/easing.scss
@@ -1,3 +1,4 @@
 $easing      : cubic-bezier(.1,.82,.25,1);
 $easing2     : cubic-bezier(.24, 2, .27, .26);
 $snap-easing : cubic-bezier(1, 0, 0, 1);
+$slow-easing : cubic-bezier(.12, .26, .26, 1.09);
