--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,15 +1,32 @@
 ---
-layout: article
+layout: base
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="article" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
+	<a href="/" class="logo">
+		petro<br/>
+		salema<b>.</b>
+	</a>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+	<header xstyle="background-image: url({{ page.cover }}">
+		<div>
+			<h1 itemprop="name headline">{{ page.title }}</h1>
+			<div class="lead">
+				<time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+					{{ page.date | date: "%b %-d, %Y" }}
+				</time>
+				{% if page.author %}
+					• <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+						<span itemprop="name">{{ page.author }}</span>
+					</span>
+				{% endif %}
+				{% if page.summary %}
+					• <span>{{ page.summary }}</span>
+				{% endif %}
+			</div>
+		</div>
+	</header>
+
+	<section itemprop="articleBody">{{ content }}</section>
 
 </article>
