--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -13,6 +13,8 @@ $brand-color: #fec147;
 $brand-color: #8A67FF;
 $brand-color: #2fd9bc;
 $brand-color: #00deb1;
+$brand-color: #f7d159;
+$brand-color: #07d159; // spotify
 $brand-color: #fc5253; // bright red
 // fg #f64028 - bg #e1e1dc
 
