--- a/css/main.scss
+++ b/css/main.scss
@@ -160,7 +160,8 @@ b {
 				background-color: $text-color;
 				transition: transform .5s $slow-easing;
 				transform: scale(1.0);
-				-webkit-filter: brightness(100%) contrast(100%) grayscale(100%);
+				-xwebkit-filter: brightness(100%) contrast(100%) grayscale(100%);
+				background-image: url(http://static1.squarespace.com/static/569fe8405a566853bcb918f6/569fe88789a60ab966e26130/56be68b63c44d89a5811be09/1458054955158/?format=1500w);
 			}
 			&:hover{
 				.bg { transform: scale(1.05) }
