--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -1,13 +1,19 @@
+article.article {
+	// background: $brand-color;
+}
 
 article.article header {
+	// mix-blend-mode: multiply;
+	// -webkit-filter: grayscale(100%);
 	position: relative;
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 100px);
 	color: #fff;
 	background-size: cover;
 	background-position: center;
 	background-color: $text-color;
-	background-image: url(http://static1.squarespace.com/static/569fe8405a566853bcb918f6/569fe88789a60ab966e26130/56be68b63c44d89a5811be09/1458054955158/?format=1500w);
+	background-image: url(http://static1.squarespace.com/static/569fe8405a566853bcb918f6/569fe88789a60ab966e26130/56be68b63c44d89a5811be09/1458054955158/?format=500w);
+	background-attachment: fixed;
 	&>div {
 		position: absolute;
 		bottom: 0;
@@ -37,11 +43,49 @@ article.article header {
 
 article.article section {
 	padding: 50px 0;
-	p {
-		max-width: 800px;
+	&>* {
+		max-width: 900px;
 		margin: 0 auto;
 		padding: 0 60px 40px;
 		font-size: 20px;
+		font-family: 'Playfair Display', serif;
 		line-height: 1.5em;
+		text-align: justify;
+	}
+	.two-col {
+		-webkit-column-count: 2;
+		-webkit-column-gap: 2em;
+		-moz-column-count: 2;
+		-moz-column-gap: 2em;
+		column-count: 2;
+		column-gap: 2em;
+	}
+	.card {
+		position: relative;
+		max-width: initial;
+		min-width: 300px;
+		min-height: 200px;
+		margin: 1em 0;
+		padding: 0;
+		&>div {
+			position: absolute;
+			background: yellow;
+			width: 100%;
+			height: 100%;
+		}
+		&.float-left, &.float-right {
+			width: 30%;
+			margin: 1em 2em;
+		}
+		&.float-left {
+			float: left;
+			margin-left: 0;
+			&.hang-out>div { left: -100px }
+		}
+		&.float-right {
+			float: right;
+			margin-right: 0;
+		}
+		&.hang-out>div { width: calc(100% + 100px) }
 	}
 }
