--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -43,14 +43,24 @@ article.article header {
 
 article.article section {
 	padding: 50px 0;
+
+	font-size: 22px;
+	font-family: 'Playfair Display', serif;
+	line-height: 1.5em;
+	text-align: justify;
+
 	&>* {
 		max-width: 900px;
-		margin: 0 auto;
-		padding: 0 60px 40px;
-		font-size: 20px;
-		font-family: 'Playfair Display', serif;
-		line-height: 1.5em;
-		text-align: justify;
+		margin: 0 auto 25px;
+		padding: 0 60px;
+		.card { margin-top: 40px }
+	}
+	blockquote {
+		font-size: 1.5em;
+		font-style: italic;
+		line-height: 1.2em;
+		letter-spacing: -0.02em;
+		color: #aaa;
 	}
 	.two-col {
 		-webkit-column-count: 2;
@@ -63,29 +73,39 @@ article.article section {
 	.card {
 		position: relative;
 		max-width: initial;
-		min-width: 300px;
-		min-height: 200px;
-		margin: 1em 0;
+		min-width: 350px;
+		min-height: 300px;
 		padding: 0;
 		&>div {
 			position: absolute;
-			background: yellow;
 			width: 100%;
 			height: 100%;
+			background: yellow;
+			outline: 3px solid green;
 		}
-		&.float-left, &.float-right {
+		&.tl, &.tr, &.bl, &.br, &.r, &.l {
 			width: 30%;
 			margin: 1em 2em;
 		}
-		&.float-left {
+		&.tl, &.tr { margin-top: .3em }
+		&.bl, &.br { margin-bottom: 0 }
+		&.tl, &.bl, &.l {
 			float: left;
-			margin-left: 0;
-			&.hang-out>div { left: -100px }
+			margin-left: -100px;
 		}
-		&.float-right {
+		&.tr, &.br, &.r {
 			float: right;
 			margin-right: 0;
+			&.hang>div { width: calc(100% + 100px) }
 		}
-		&.hang-out>div { width: calc(100% + 100px) }
+	}
+	.drooping {
+		padding-top: 100px;
+		.card {
+			&.tl, &.tr {
+				div { background: red }
+				margin-top: -100px;
+			}
+		}
 	}
 }
