--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -49,11 +49,12 @@ article.article section {
 	line-height: 1.5em;
 	text-align: justify;
 
-	&>* {
+	&>*, p {
 		max-width: 900px;
 		margin: 0 auto 25px;
 		padding: 0 60px;
 		.card { margin-top: 40px }
+		&:last-child { margin-bottom: 0 }
 	}
 	blockquote {
 		font-size: 1.5em;
@@ -61,6 +62,8 @@ article.article section {
 		line-height: 1.2em;
 		letter-spacing: -0.02em;
 		color: #aaa;
+		padding: 20px 60px 60px;
+		margin: 0 auto;
 	}
 	.two-col {
 		-webkit-column-count: 2;
@@ -76,13 +79,10 @@ article.article section {
 		min-width: 350px;
 		min-height: 300px;
 		padding: 0;
-		&>div {
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			background: yellow;
-			outline: 3px solid green;
-		}
+		display: flex;
+		align-items: center;
+		background: yellow;
+		p { margin: 25px auto }
 		&.tl, &.tr, &.bl, &.br, &.r, &.l {
 			width: 30%;
 			margin: 1em 2em;
