--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -1,5 +1,11 @@
+$header-font: 'Playfair Display', serif;
+$body-font: 'Lora', 'Times New Roman', serif;
+
 article.article {
-	// background: $brand-color;
+	h1, h2, h3 {
+		font-family: $header-font;
+		line-height: 1em;
+	}
 }
 
 article.article header {
@@ -31,8 +37,6 @@ article.article header {
 	h1 {
 		margin: 0 0 20px;
 		font-size: 100px;
-		font-family: 'Playfair Display', serif;
-		line-height: 1em;
 	}
 	.lead {
 		font-weight: 300;
@@ -43,27 +47,37 @@ article.article header {
 
 article.article section {
 	padding: 50px 0;
-
-	font-size: 22px;
-	font-family: 'Playfair Display', serif;
-	line-height: 1.5em;
+	font-size: 21px;
+	font-family: $body-font;
+	line-height: 1.6em;
 	text-align: justify;
 
 	&>*, p {
-		max-width: 900px;
+		max-width: 800px;
 		margin: 0 auto 25px;
 		padding: 0 60px;
 		.card { margin-top: 40px }
 		&:last-child { margin-bottom: 0 }
 	}
 	blockquote {
-		font-size: 1.5em;
-		font-style: italic;
-		line-height: 1.2em;
-		letter-spacing: -0.02em;
-		color: #aaa;
-		padding: 20px 60px 60px;
 		margin: 0 auto;
+		padding: 20px 60px 60px;
+		font-family: $header-font;
+		font-weight: 300;
+		font-size: 1.4em;
+		font-style: italic;
+		line-height: 1.4em;
+		letter-spacing: -0.02em;
+		text-align: left;
+		color: #999;
+		&::after {
+			width: 10%;
+			height: 5px;
+			background: #eee;
+			content: '';
+			display: block;
+			margin: 60px auto 0;
+		}
 	}
 	.two-col {
 		-webkit-column-count: 2;
@@ -82,7 +96,6 @@ article.article section {
 		display: flex;
 		align-items: center;
 		background: yellow;
-		p { margin: 25px auto }
 		&.tl, &.tr, &.bl, &.br, &.r, &.l {
 			width: 30%;
 			margin: 1em 2em;
@@ -98,6 +111,56 @@ article.article section {
 			margin-right: 0;
 			&.hang>div { width: calc(100% + 100px) }
 		}
+		&>div {
+			width: 100%;
+		}
+	}
+	.backdropped {
+		min-height: 100vh;
+		margin: 60px auto;
+		padding: 60px 0;
+		background: white;
+		overflow: hidden;
+		p {
+			z-index: 2;
+			position: relative;
+			color: #fff;
+		}
+		&::before {
+			background-image: url(http://www.petrosalema.com/interfaces-that-think/noise.png);
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 1;
+			opacity: 0.05;
+			mix-blend-mode: multiply;
+		}
+		&::after {
+			z-index: 1;
+			position: absolute;
+			content: '';
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-image: linear-gradient(
+				rgba(0,0,0,0.5),
+				rgba(0,0,0,0.8) 70%,
+				rgba(0,0,0,0.9)
+			);
+		}
+	}
+	.bg {
+		-webkit-filter: contrast(30%);
+		position: absolute;
+		min-width: 100%;
+		min-height: 100%;
+		top: 0;
+		left: 0;
 	}
 	.drooping {
 		padding-top: 100px;
