--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -50,7 +50,7 @@ article.article section {
 	font-size: 21px;
 	font-family: $body-font;
 	line-height: 1.6em;
-	text-align: justify;
+	text-align: left;
 
 	&>*, p {
 		max-width: 800px;
