--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -52,6 +52,7 @@ article.article section {
 	line-height: 1.6em;
 	text-align: left;
 
+	img { width: 100% }
 	&>*, p {
 		max-width: 800px;
 		margin: 0 auto 25px;
@@ -111,9 +112,7 @@ article.article section {
 			margin-right: 0;
 			&.hang>div { width: calc(100% + 100px) }
 		}
-		&>div {
-			width: 100%;
-		}
+		&>div { width: 100% }
 	}
 	.backdropped {
 		min-height: 100vh;
@@ -121,10 +120,19 @@ article.article section {
 		padding: 60px 0;
 		background: white;
 		overflow: hidden;
-		p {
+		&>* {
 			z-index: 2;
 			position: relative;
 			color: #fff;
+		}
+		.bg {
+			z-index: 0;
+			position: absolute;
+			min-width: 100%;
+			min-height: 100%;
+			top: 0;
+			left: 0;
+			-webkit-filter: contrast(30%);
 		}
 		&::before {
 			background-image: url(http://www.petrosalema.com/interfaces-that-think/noise.png);
@@ -135,8 +143,8 @@ article.article section {
 			left: 0;
 			width: 100%;
 			height: 100%;
-			z-index: 1;
-			opacity: 0.05;
+			z-index: 3;
+			opacity: 0.07;
 			mix-blend-mode: multiply;
 		}
 		&::after {
@@ -148,19 +156,16 @@ article.article section {
 			width: 100%;
 			height: 100%;
 			background-image: linear-gradient(
-				rgba(0,0,0,0.5),
-				rgba(0,0,0,0.8) 70%,
-				rgba(0,0,0,0.9)
+				rgba(0,0,0,0.3),
+				rgba(0,0,0,0.6) 70%,
+				rgba(0,0,0,0.7)
 			);
 		}
-	}
-	.bg {
-		-webkit-filter: contrast(30%);
-		position: absolute;
-		min-width: 100%;
-		min-height: 100%;
-		top: 0;
-		left: 0;
+		&>div {
+			max-width: 800px;
+			margin: 0 auto 25px;
+			padding: 0 60px;
+		}
 	}
 	.drooping {
 		padding-top: 100px;
