--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
         </svg>
       </a>
 
-      <a href="#">
+      <a href="/talks">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"
           id="speaking-icon">
         <g>
