--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -6,6 +6,13 @@ article.article {
     font-family: $header-font;
     line-height: 1em;
   }
+  .video {
+    margin: 0px auto 25px;
+    iframe {
+      width: 100%;
+      height: 390px;
+    }
+  }
 }
 
 article.article header {
@@ -16,9 +23,8 @@ article.article header {
   height: calc(100vh - 100px);
   color: #fff;
   background-size: cover;
-  background-position: center;
-  background-color: $text-color;
-  background-image: url(http://static1.squarespace.com/static/569fe8405a566853bcb918f6/569fe88789a60ab966e26130/56be68b63c44d89a5811be09/1458054955158/?format=500w);
+  background-position: center bottom;
+  background-color: $brand-color;
   background-attachment: fixed;
   &>div {
     position: absolute;
@@ -32,16 +38,16 @@ article.article header {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: $brand-color;
     background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8));
   }
   h1 {
+    max-width: 650px;
     margin: 0 0 20px;
-    font-size: 100px;
+    font-size: 80px;
   }
   .lead {
     font-weight: 300;
-    font-size: 40px;
+    font-size: 30px;
     opacity: 0.7;
   }
 }
