--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -8,7 +8,7 @@ article.article {
   }
   .video {
     margin: 0px auto 25px;
-    iframe {
+    iframe, video {
       width: 100%;
       height: 390px;
     }
@@ -43,7 +43,7 @@ article.article header {
   h1 {
     max-width: 650px;
     margin: 0 0 20px;
-    font-size: 80px;
+    font-size: 70px;
   }
   .lead {
     font-weight: 300;
@@ -182,5 +182,18 @@ article.article section {
         margin-top: -100px;
       }
     }
+  }
+
+  &:first-of-type>p:first-of-type:first-letter {
+    color: #231f20;
+    display: inline-block;
+    float: left;
+    font-family: "Playfair Display", serif;
+    font-size: 5em;
+    font-weight: 300;
+    letter-spacing: 0;
+    line-height: .5em;
+    margin: 0;
+    padding: 0.15em 0.1em 0.15em 0;
   }
 }
