--- a/_sass/masthead.scss
+++ b/_sass/masthead.scss
@@ -8,17 +8,20 @@
     width: 50%;
     height: 100%;
     background: #fff;
+    flex: 1;
   }
 
   header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 100vh;
     position: relative;
     padding: 3em;
     color: #fff;
     background: $brand-color;
     &>div { position: relative }
+    transition: .5s font-size cubic-bezier(.1,.82,.25,1);
 
     h1 {
       margin: 0;
@@ -82,5 +85,25 @@
       padding: 0;
       line-height: 1.4em;
     }
+  }
+
+}
+@media (max-width: 900px) {
+  #masthead {
+    flex-direction: column;
+    height: auto;
+    &>* {
+      width: 100%;
+    }
+    header::before {
+      right: 0;
+    }
+  }
+}
+@media (max-width: 600px) {
+  #masthead header {
+    h1 { font-size: 60px; }
+    h3 { font-size: 25px; }
+    h4 { font-size: 25px; }
   }
 }
