--- a/css/main.scss
+++ b/css/main.scss
@@ -115,6 +115,16 @@ b {
   }
 }
 
+@media (max-width: 900px) {
+  #about {
+    font-size: 30px;
+    padding: 80px;
+    &::before {
+      opacity: 0.7;
+    }
+  }
+}
+
 .posts {
   margin: 0;
   padding: 0;
@@ -192,6 +202,18 @@ b {
     font-size: 80px;
     font-weight: 900;
     b { padding: 0; }
+  }
+}
+
+@media (max-width: 900px) {
+  .posts li a .post-details h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 900px) {
+  .posts li {
+    width: 100vw;
   }
 }
 
