Improve responsiveness in talk layout

--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -8,7 +8,9 @@ layout: base
     salema<b>.</b>
   </a>
 
-  <header style="background-image: url({{ page.cover }})">
+  <header>
+    <!-- div class="bg" style="background-image: url({{ page.cover }})"></div -->
+    <br/>
     <div>
       <h1 itemprop="name headline">{{ page.title }}</h1>
       <div class="lead">
