--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -1,10 +1,5 @@
 $brand-color: rgb(168, 86, 239);
 $brand-color: rgb(76, 214, 188);
-$brand-color: rgb(75, 181, 234); // blue
-$brand-color: rgb(77, 214, 189); // torquois
-$brand-color: rgb(250, 113, 94); // tomatoe
-$brand-color: rgb(238, 202, 70); // mustard
-$brand-color: rgb(253, 95, 101); // red
 $brand-color: #f5263a; // brilliant red
 $brand-color: #f3d02c;
 $brand-color: #98c4b4;
@@ -19,4 +14,11 @@ $brand-color: #fc5253; // bright red
 // fg #f64028 - bg #e1e1dc
 
 $text-color: #373737;
+
+
+$blue: rgb(75, 181, 234); // blue
+$aqua: rgb(77, 214, 189); // torquois
+$tomatoe: rgb(250, 113, 94); // tomatoe
+$mustard: rgb(238, 202, 70); // mustard
+$red: rgb(253, 95, 101); // red
 
