--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link rel="shortcut icon" type="imgage/x-icon" href="static/favicon.ico" />
   <link rel="icon"          type="image/png"     href="static/favicon.png" />
-  <link rel='stylesheet'    type='text/css'      href='https://fonts.googleapis.com/css?family=Lora|Playfair+Display:400,900'>
+  <!-- link rel='stylesheet'    type='text/css' href='https://fonts.googleapis.com/css?family=Lora|Playfair+Display:400,900' -->
   <link rel="stylesheet"    type='text/css'      href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical"     type='text/css'      href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate"     type="application/rss+xml" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="{{ site.title }}">
