--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -16,29 +16,16 @@ article.article {
 }
 
 article.article header {
-  // mix-blend-mode: multiply;
-  // -webkit-filter: grayscale(100%);
   position: relative;
   width: 100%;
-  height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
   color: #fff;
-  background-size: cover;
-  background-position: center bottom;
-  background-color: $brand-color;
-  background-attachment: fixed;
+  background: $aqua;
+  display: flex;
+  align-items: flex-end;
   &>div {
-    position: absolute;
-    bottom: 0;
-    margin: 60px;
-  }
-  &::before {
-    content: '';
-    display: block;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8));
+    padding: 120px 60px 60px;
   }
   h1 {
     max-width: 650px;
@@ -49,6 +36,29 @@ article.article header {
     font-weight: 300;
     font-size: 30px;
     opacity: 0.7;
+  }
+  .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-size: cover;
+    background-position: center bottom;
+    background-attachment: fixed;
+    mix-blend-mode: multiply;
+    -webkit-filter: contrast(70%) grayscale(100%) brightness(100%);
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 50%;
+      background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6));
+    }
   }
 }
 
@@ -202,8 +212,9 @@ article.article section {
   article.article header {
     h1 { font-size: 50px; }
     .lead { font-size: 25px; }
-    div {
-      //border: 30px solid yellow;
+    &>div {
+      padding-left: 40px;
+      padding-right: 40px;
     }
   }
   article.article section {
@@ -214,5 +225,8 @@ article.article section {
     }
     .image, .video { padding: 0; }
     blockquote { padding: 25px; }
+    &:first-of-type {
+      padding-top: 0;
+    }
   }
 }
