--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -97,6 +97,11 @@ article.article section {
       margin: 60px auto 0;
     }
   }
+  @media (max-width: 600px) {
+    blockquote::after {
+      margin-top: 30px;
+    }
+  }
   .two-col {
     -webkit-column-count: 2;
     -webkit-column-gap: 2em;
@@ -225,8 +230,6 @@ article.article section {
     }
     .image, .video { padding: 0; }
     blockquote { padding: 25px; }
-    &:first-of-type {
-      padding-top: 0;
-    }
+    &:first-of-type { padding-top: 0; }
   }
 }
