--- a/_sass/fullscreen-menu.scss
+++ b/_sass/fullscreen-menu.scss
@@ -1,7 +1,7 @@
 #fullscreen-menu {
   transform: translate(-100%);
   transition: transform .4s $snap-easing;
-  z-index: 9;
+  z-index: 9999;
   top: 0;
   left: 0;
   width: 100%;
@@ -72,8 +72,14 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width:6400px) {
   #fullscreen-menu nav ul {
-    font-size: 20px;
+    margin: 0;
+  }
+}
+@media (max-height: 400px) {
+  #fullscreen-menu nav ul li a {
+    font-size: 50px;
+    line-height: 100px;
   }
 }
