--- a/_sass/fullscreen-menu.scss
+++ b/_sass/fullscreen-menu.scss
@@ -1,82 +1,74 @@
 #fullscreen-menu {
-  transform: translate(-100%);
+  transform: translateX(-100%);
   transition: transform .4s $snap-easing;
   z-index: 9999;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  position: fixed;
   background: $brand-color;
+  overflow-y: scroll;
   text-align: center;
   font-size: 60px;
   font-weight: 700;
   opacity: 0.95;
-  nav {
-    top: 50%;
-    width: 100%;
-    position: absolute;
-    transform: translateY(-50%);
-    ul {
-      list-style: none;
-      margin: 0 150px 50px;
-      padding: 0;
-      li {
-        margin: 0;
-        opacity: 0;
-        transform: translateY(50%);
-        a {
-          display: block;
-          line-height: 120px;
-          color: #fff;
-          b {
-            font-size: 1em;
-            padding-left: 0.05em;
-          }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    li {
+      margin: 0;
+      opacity: 0;
+      transform: translateY(50%);
+      a {
+        display: inline-block;
+        line-height: 120px;
+        color: #fff;
+        b {
+          font-size: 1em;
+          padding-left: 0.05em;
         }
-        &:hover a {
-          color: $text-color;
-          transform: scale3d(.9,.9,.9);
-        }
+      }
+      &:hover a {
+        color: $text-color;
+        transform: scale3d(.9,.9,.9);
       }
     }
   }
   #connect-icons {
     opacity: 0;
-    transform: translateY(-50%);
+    transform: translateY(-200px);
+    line-height: 120px;
+    &:hover a { transform: initial; }
   }
-  &.opened {
+}
+body.nav-opened {
+  overflow: hidden;
+  #fullscreen-menu {
     transform: translateX(0);
-    #connect-icons {
+    nav ul li, #connect-icons {
       opacity: 1;
       transform: translateY(0);
-    }
-    nav ul li {
-      opacity: 1;
-      transform: translateY(0);
-      transition: transform 1s $easing, opacity 1s $easing;
+      transition: 1s transform $easing, 1s opacity $easing;
       &:nth-child(1) { transition-delay: .4s }
       &:nth-child(2) { transition-delay: .5s }
       &:nth-child(3) { transition-delay: .6s }
+      &:nth-child(4) { transition-delay: .4s }
     }
   }
 }
-#connect-icons {
-  line-height: 120px;
-  transition: transform 1s $easing .4s, opacity 1s $easing .4s;
-  a {
-    svg { fill: #fff }
-    svg#twitter-icon { width: 40px }
-    svg#github-icon { width: 36px }
-    svg#speaking-icon { width: 44px }
-    &:hover svg { fill: $text-color }
-  }
-}
-
-@media (max-width:6400px) {
-  #fullscreen-menu nav ul {
-    margin: 0;
-  }
+#connect-icons a {
+  svg { fill: #fff }
+  svg#twitter-icon { width: 40px }
+  svg#github-icon { width: 36px }
+  svg#speaking-icon { width: 44px }
+  &:hover svg { fill: $text-color }
 }
 @media (max-height: 400px) {
   #fullscreen-menu nav ul li a {
