--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,10 +7,10 @@
 <div id="fullscreen-menu">
   <nav>
     <ul>
-      <li><a href="/about">About<b>.</b></a></li>
-      <li><a href="/talks">Talks<b>.</b></a></li>
-      <li><a href="/work">Work<b>.</b></a></li>
-      <li id="connect-icons">
+      <li><a href="/about">about<b>.</b></a></li>
+      <li><a href="/talks">talks<b>.</b></a></li>
+      <li><a href="/work">work<b>.</b></a></li>
+      <li class="connect-icons">
         <a class="twitter social-link" href="https://twitter.com/petrosalema" title="Twitter" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"
             id="twitter-icon">
