--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -2,10 +2,11 @@ body#about {
   overflow: initial;
   height: initial;
   padding: 150px 100px;
+  font-weight: 900;
   h1 { margin-top: 0; }
   p {
     font-size: 40px;
-    max-width: 700px;
+    max-width: 700;
     margin-left: auto;
     margin-right: auto;
   }
