--- a/_sass/masthead.scss
+++ b/_sass/masthead.scss
@@ -36,6 +36,7 @@
       }
     }
     &::before {
+      opacity: 0.95;
       content: '';
       display: block;
       position: absolute;
@@ -49,12 +50,12 @@
       background-image: url(../static/portrait.png);
       -webkit-filter: contrast(0.7);
          -moz-filter: contrast(0.7);
-          filter: contrast(0.7);
+              filter: contrast(0.7);
     }
   }
 
   article {
-    padding: 3em 10vw;
+    padding: 3em 7vw;
     &>div>div {
       position: relative;
       max-width: 500px;
@@ -62,7 +63,7 @@
       &>div { text-transform: uppercase }
     }
     h2 {
-      margin: 0;
+      margin: 0 0 .2em;
       padding: 0;
       line-height: 0.9em;
       font-weight: 700;
@@ -79,6 +80,10 @@
         font-size: .7em;
         vertical-align: middle;
       }
+    }
+    h4 a {
+      font-size: 20px;
+      font-weight: 900;
     }
     p {
       margin: 0;
